[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.185",features = ["derive"]}
reqwest = { version = "0.11",features = ["rustls-tls", "json"]}
tokio = { version = "1", features = ["full","fs"] }
actix-web ={version ="4.3.1",features = ["rustls"]}
actix-files = "0.6.2"
actix-cors = "0.6.1"
actix-session = {version="0.7.2",features=["redis-rs-session"]}
tracing-actix-web = "0.7"
#Aws APIs
aws_apis={git = "https://github.com/Sanjuvi/aws_apis.git"}
colored = "2.0.4"



#others
tera = "1.0"
checkmail = "0.1.1"
unicode-segmentation = "1.10.1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" ,"postgres","macros",
"uuid","chrono","json"] }
dotenv = "0.15.0"
bincode = "1.3.3"
serde_json = "1"